# web-sw-cor24-forth

./: .gitignore  CHANGES.md  CLAUDE.md  Cargo.toml  README.md  Trunk.toml  build.rs  index.html
asm/: forth-bootstrap.s  forth-interpreter.s
demos/: arithmetic.fth  comparison.fth  hex-mode.fth  led-blink.fth  return-stack.fth  stack-ops.fth  words.fth
docs/: ai_agent_instructions.md  demos.md  reference.md  research.txt  sample.fth  tutorial.md  user-guide.md
pages/: debugger-2f7f79f63b85ee3a.css  debugger-7e5a2acb914f6f09.css  debugger-9fc4b747a14aa78d.css  debugger-bdcefaddf1294839.css  debugger-f22676129953e4f8.css  index.html  web-sw-cor24-forth-16bdfb4fa3c3e612.js  web-sw-cor24-forth-16bdfb4fa3c3e612_bg.wasm  web-sw-cor24-forth-24b0853896dd26ce.js  web-sw-cor24-forth-24b0853896dd26ce_bg.wasm  web-sw-cor24-forth-2840c70e7ea82d88.js  web-sw-cor24-forth-2840c70e7ea82d88_bg.wasm  web-sw-cor24-forth-3035bddbe76edbd4_bg.wasm  web-sw-cor24-forth-3c224b584a64656e_bg.wasm  web-sw-cor24-forth-706add1cb2e5f8c4.js  web-sw-cor24-forth-706add1cb2e5f8c4_bg.wasm  web-sw-cor24-forth-83a5297f21cca22b_bg.wasm  web-sw-cor24-forth-944d7e6348c3fb51_bg.wasm  web-sw-cor24-forth-96c2681f79ea18c9_bg.wasm  web-sw-cor24-forth-a804ba7760d97353_bg.wasm  web-sw-cor24-forth-beabab7492f625a_bg.wasm  web-sw-cor24-forth-dc3be8fd9a999d55_bg.wasm  web-sw-cor24-forth-f1bf8b8a8cd680fa.js  web-sw-cor24-forth-f1bf8b8a8cd680fa_bg.wasm  web-sw-cor24-forth-f454d7671583c9bd_bg.wasm  web-tf24a-258e65856c64f419_bg.wasm  web-tf24a-293105b5aca84211.js  web-tf24a-293105b5aca84211_bg.wasm  (+3 more)
scripts/: deploy.sh  (+3 more)
(+9 files in other folders)
