[package]
name = "web-sw-cor24-forth"
version = "0.1.0"
edition = "2024"
authors = ["Michael A Wright"]
license = "MIT"
description = "Browser-based Forth debugger on COR24"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
cor24-emulator = { path = "../sw-cor24-emulator", default-features = false }

[dependencies]
cor24-emulator = { path = "../sw-cor24-emulator", default-features = false }
cor24-isa = { path = "../sw-cor24-emulator/isa", features = ["serde"] }
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console", "HtmlTextAreaElement", "HtmlInputElement", "HtmlSelectElement", "HtmlElement", "KeyboardEvent", "Window", "Storage"] }
gloo = "0.11"
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
